--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,11 @@
+:root {
+  --van-default-color: #fff;
+  --van-primary-color: #5470c6;
+  --van-warning-color: #fc8452;
+  --van-danger-color: #ee6666;
+  --van-success-color: #91cc75;
+}
+
 *,
 *::before,
 *::after {
@@ -17,7 +25,6 @@ body {
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: var(--van-font-size-md) !important;
-  /* font-size: 15px; */
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
