feat: 登录逻辑&导航栏

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,6 +4,8 @@
   --van-warning-color: #fc8452;
   --van-danger-color: #ee6666;
   --van-success-color: #91cc75;
+
+  --van-popover-action-width: auto;
 }
 
 *,
